<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="179dp"
    android:layout_height="210dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="7dp"
    android:layout_margin="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/item_main_imageView"
        android:layout_width="179dp"
        android:layout_height="118dp"
        android:minHeight="118dp"
        android:maxHeight="118dp"
        android:minWidth="179dp"
        android:maxWidth="179dp"
        android:contentDescription="@string/productImage" />

        <TextView
            android:id="@+id/item_main_itemName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/itemName"
            android:fontFamily="@font/titilium"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="2dp"/>

        <TextView
            android:id="@+id/item_main_itemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemPrice"
            android:fontFamily="@font/lato"
            android:textSize="18sp"
            android:textColor="#2D9CDB"
            android:layout_marginTop="10dp"
            android:layout_marginStart="2dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
