<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CategoriesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="17dp"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/cancelButton" />

        <TextView
            style="@style/categoriesTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="17dp"
            android:text="@string/categories" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#EAEFFD" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCategories"
        android:layout_width="332dp"
        android:layout_height="439dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="102dp"
        android:layout_marginRight="41dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/filterButton"
        android:layout_width="251dp"
        android:layout_height="56dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/button_style_yellow"
        android:text="@string/getFilter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        style="@style/sortAndFilter"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarCategories"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>